==> mysensors/MySensors/libraries/UIPEthernet/utility/Enc28J60Network.cpp <==
#include "Enc28J60Network.h"
#include "Arduino.h"
#include <avr/io.h>
#include "enc28j60.h"
#include "uip.h"
#include "HardwareSerial.h"
#define CSACTIVE digitalWrite(ENC28J60_CONTROL_CS, LOW)
#define CSPASSIVE digitalWrite(ENC28J60_CONTROL_CS, HIGH)
#define waitspi() while(!(SPSR&(1<<SPIF)))

uint8_t Enc28J60Network::readByte(uint16_t addr)
{
  writeRegPair(ERDPTL, addr);

  CSACTIVE;
  // issue read command
  SPDR = ENC28J60_READ_BUF_MEM;
  waitspi();
  // read data
  SPDR = 0x00;
  waitspi();
  CSPASSIVE;
  return (SPDR);
}

void Enc28J60Network::writeByte(uint16_t addr, uint8_t data)
{
  writeRegPair(EWRPTL, addr);

  CSACTIVE;
  // issue write command
  SPDR = ENC28J60_WRITE_BUF_MEM;
  waitspi();
  // write data
  SPDR = data;
  waitspi();
  CSPASSIVE;
}

uint8_t
Enc28J60Network::readOp(uint8_t op, uint8_t address)
{
  CSACTIVE;
  // issue read command
  SPDR = op | (address & ADDR_MASK);
  waitspi();
  // read data
  SPDR = 0x00;
  waitspi();
  // do dummy read if needed (for mac and mii, see datasheet page 29)
  if(address & 0x80)
  {
    SPDR = 0x00;
    waitspi();
  }
  // release CS
  CSPASSIVE;
  return(SPDR);
}

void
Enc28J60Network::writeOp(uint8_t op, uint8_t address, uint8_t data)
{
  CSACTIVE;
  // issue write command
  SPDR = op | (address & ADDR_MASK);
  waitspi();
  // write data
  SPDR = data;
  waitspi();
  CSPASSIVE;
}

void
Enc28J60Network::readBuffer(uint16_t len, uint8_t* data)
{
  CSACTIVE;
  // issue read command
  SPDR = ENC28J60_READ_BUF_MEM;
  waitspi();
  while(len)
  {
    len--;
    // read data
    SPDR = 0x00;
    waitspi();
    *data = SPDR;
    data++;
  }
  //*data='\0';
  CSPASSIVE;
}

void
Enc28J60Network::writeBuffer(uint16_t len, uint8_t* data)
{
  CSACTIVE;
  // issue write command
  SPDR = ENC28J60_WRITE_BUF_MEM;
  waitspi();
  while(len)
  {
    len--;
    // write data
    SPDR = *data;
    data++;
    waitspi();
  }
  CSPASSIVE;
}

uint16_t
Enc28J60Network::chksum(uint16_t sum, memhandle handle, memaddress pos, uint16_t len)
{
  uint16_t t;
  len = setReadPtr(handle, pos, len)-1;
  CSACTIVE;
  // issue read command
  SPDR = ENC28J60_READ_BUF_MEM;
  waitspi();
  uint16_t i;
  for (i = 0; i < len; i+=2)
  {
    // read data
    SPDR = 0x00;
    waitspi();
    t = SPDR << 8;
    SPDR = 0x00;
    waitspi();
    t += SPDR;
    sum += t;
    if(sum < t) {
      sum++;            /* carry */
    }
  }
  if(i == len) {
    SPDR = 0x00;
    waitspi();
    t = (SPDR << 8) + 0;
    sum += t;
    if(sum < t) {
      sum++;            /* carry */
    }
  }
  CSPASSIVE;

  /* Return sum in host byte order. */
  return sum;
}
